<resources>
    <string name="app_name">Docker App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_containers">Containers</string>
    <string name="menu_images">Images</string>
    <string name="title_activity_server_list">ServerList</string>
    <string name="open">Open</string>
    <string name="delete">Delete</string>
    <string name="title_activity_login">Login Activity</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_container_list">Container List</string>
    <string name="show_inactive">Show Inactive</string>
    <string name="image_created_at">Created at: %s</string>
    <string name="size_mb">%dMB</string>
    <string name="title_activity_image_details">Image Details</string>
    <string name="label_docker_version">Docker Version:</string>
    <string name="label_created">Created:</string>
    <string name="label_size">Size:</string>
    <string name="label_arch">Arch:</string>
    <string name="title_activity_add_server">Add Server</string>
    <string name="name">Name</string>
    <string name="url">Url</string>
    <string name="save">Save</string>
    <string name="error_server_url_null">Server url can not be empty</string>
    <string name="error_server_name_null">Server name can not be empty</string>
    <string name="error_server_name_no_protocol">Server url must start with http:// or https://</string>
</resources>
